LU-507 check_write_rcs() return -EPROTO instead of -ENOSPC

remote_rcs[i] is an unsigned value so the check remote_rcs[i] < 0 is
always false.

Change-Id: I5468d9185e4c8de819f58693375e9d96722b9fbb
Signed-off-by: Johann Lombardi <johann@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/1115
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>